Cycles render hangs on Linux and AMD Radeon RX 5700 XT #74262

Closed
opened 2020-02-27 17:19:57 +01:00 by Rey Leonard M. Amorato · 47 comments

System Information
Operating system: Linux-5.3.0-40-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits
Graphics card: AMD Radeon RX 5700 XT (NAVI10, DRM 3.33.0, 5.3.0-40-generic, LLVM 9.0.0) X.Org 4.5 (Core Profile) Mesa 19.2.8

Blender Version
Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-27 09:54, hash: 830a45a18a
Worked: 2.81

Short description of error
Blender fails to render using GPU

Exact steps for others to reproduce the error
blender --factory-startup > set render engine to Cycles > Set Device to GPU > Preferences - System - OpenCL > Render

Render fails with an error:

Split kernel error: failed to load kernel_path_init

blender-debug-gpu.txt

**System Information** Operating system: Linux-5.3.0-40-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits Graphics card: AMD Radeon RX 5700 XT (NAVI10, DRM 3.33.0, 5.3.0-40-generic, LLVM 9.0.0) X.Org 4.5 (Core Profile) Mesa 19.2.8 **Blender Version** Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-27 09:54, hash: `830a45a18a` Worked: 2.81 **Short description of error** Blender fails to render using GPU **Exact steps for others to reproduce the error** blender --factory-startup > set render engine to Cycles > Set Device to GPU > Preferences - System - OpenCL > Render Render fails with an error: ``` Split kernel error: failed to load kernel_path_init ``` [blender-debug-gpu.txt](https://archive.blender.org/developer/F8375901/blender-debug-gpu.txt)

Added subscriber: @RL

Added subscriber: @RL

#74275 was marked as duplicate of this issue

#74275 was marked as duplicate of this issue

This issue was referenced by blender/cycles@210ac033e8

This issue was referenced by blender/cycles@210ac033e8d9d621b8a7cea667e30e5ca97a2e87

This issue was referenced by f48ad37ef0

This issue was referenced by f48ad37ef08f4b0767807f4e285e365368250157

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-02-27 17:38:48 +01:00
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

@brecht Thanks for fixing this. How do I test for these errors in future?

@brecht Thanks for fixing this. How do I test for these errors in future?

Rendering with OpenCL would help find them, if you have an AMD card. Normally we'd catch this quite quickly since I have an AMD card that I test with often, but I still didn't get this error (probably due to different driver version).

Rendering with OpenCL would help find them, if you have an AMD card. Normally we'd catch this quite quickly since I have an AMD card that I test with often, but I still didn't get this error (probably due to different driver version).
Member

In that case do you recommend to always test explicitly?

In that case do you recommend to always test explicitly?

This fixed the error. Thanks for the quick fix Brecht! However now the render hangs indefinitely, without the black info bar at the top (the one that says how many samples are done, etc.) The render simply does not start, I don't know what to give you because there's no error out of the terminal or anything.

This fixed the error. Thanks for the quick fix Brecht! However now the render hangs indefinitely, without the black info bar at the top (the one that says how many samples are done, etc.) The render simply does not start, I don't know what to give you because there's no error out of the terminal or anything.
Brecht Van Lommel changed title from Split kernel error: failed to load kernel_path_init to Cycles render hangs on Linux and AMD Radeon RX 5700 XT 2020-02-28 14:28:00 +01:00
Brecht Van Lommel removed their assignment 2020-02-28 14:28:00 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

@CharlieJolly, whenever making changes to the Cycles kernel, we should always test Cycles GPU rendering.

@CharlieJolly, whenever making changes to the Cycles kernel, we should always test Cycles GPU rendering.

Is there anything I could do to help?

Is there anything I could do to help?

If you build Blender yourself, you could try to git bisect to find the specific commit that caused the issue. That can be quite time consuming of course.

Otherwise we will look at it before the 2.83 release.

If you build Blender yourself, you could try to git bisect to find the specific commit that caused the issue. That can be quite time consuming of course. Otherwise we will look at it before the 2.83 release.

should I mark commits that fail with Split kernel error: failed to load kernel_path_init bad or just the ones that hangs? The last time I tried to bisect, I marked those as good, git wasn't able to find the right commit.

should I mark commits that fail with `Split kernel error: failed to load kernel_path_init` bad or just the ones that hangs? The last time I tried to bisect, I marked those as good, git wasn't able to find the right commit.

You can use git bisect skip for those.

You can use `git bisect skip` for those.

According to git bisect: ec62413f803ee506633f0e52d1e52b0980c0ed0d is the first bad commit.

Hope this helps.

According to git bisect: `ec62413f803ee506633f0e52d1e52b0980c0ed0d` is the first bad commit. Hope this helps.

Thanks. Unfortunately, that's not the specific commit that would have caused it, but maybe with skipping it wasn't able to find something closer.

Thanks. Unfortunately, that's not the specific commit that would have caused it, but maybe with skipping it wasn't able to find something closer.

I agree it's a bit weird since there are no cycles-specific files edited in that commit, but I don't get the error when building with the commit before that. Or earlier. I'm only having problems after that specific commit. So maybe git bisect was on to something and this is something that could be looked at.

I agree it's a bit weird since there are no cycles-specific files edited in that commit, but I don't get the error when building with the commit before that. Or earlier. I'm only having problems after that specific commit. So maybe git bisect was on to something and this is something that could be looked at.

Hi Brecht, is there anything else I could do to help at this point?

Hi Brecht, is there anything else I could do to help at this point?
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Isn’t that the commit that broke the NVIDIA symbol from Blender being recognized on certain Windows laptops because USD exports around 2000 symbols?

@RL have you tried building Blender without USD?

Isn’t that the commit that broke the NVIDIA symbol from Blender being recognized on certain Windows laptops because USD exports around 2000 symbols? @RL have you tried building Blender without USD?

@EAW @brecht I did try to build without USD (WITH_USD:BOOL=OFF) and GPU render works without issues. I'm convinced that USD is indeed the culprit.

@EAW @brecht I did try to build without USD (`WITH_USD:BOOL=OFF`) and GPU render works without issues. I'm convinced that USD is indeed the culprit.

@EAW, is there a report about this NVIDIA symbol issue? I was not aware of this, also seems surprising.

@RL), I committed some changes in bae1c24, they may help but I'm not particularly hopeful about that.

These are now the symbols added by enabled WITH_USD: P1327.

I'm not sure if the solution is to be found in there. I guess either the AMD OpenCL driver actually contains USD code (or loads another library that does), or there are symbols with names that happen to match.

@EAW, is there a report about this NVIDIA symbol issue? I was not aware of this, also seems surprising. @RL), I committed some changes in bae1c24, they may help but I'm not particularly hopeful about that. These are now the symbols added by enabled `WITH_USD`: [P1327](https://archive.blender.org/developer/P1327.txt). I'm not sure if the solution is to be found in there. I guess either the AMD OpenCL driver actually contains USD code (or loads another library that does), or there are symbols with names that happen to match.
Member

Added subscribers: @evan-4, @LazyDodo

Added subscribers: @evan-4, @LazyDodo
Member

@evan-4 Wilson (EAW), is there a report about this NVIDIA symbol issue? I was not aware of this, also seems surprising.

#72841 was a ticket but there are more from around the same time.

Problem was remedied in D6563 D6645 D6646 D6647

I never took apart the nvidia driver to validate, but if the NvOptimusEnablement has a too high ordinal (gut feeling says > 1024, but it's hard to test) it stops working.

> @evan-4 Wilson (EAW), is there a report about this NVIDIA symbol issue? I was not aware of this, also seems surprising. #72841 was a ticket but there are more from around the same time. Problem was remedied in [D6563](https://archive.blender.org/developer/D6563) [D6645](https://archive.blender.org/developer/D6645) [D6646](https://archive.blender.org/developer/D6646) [D6647](https://archive.blender.org/developer/D6647) I never took apart the nvidia driver to validate, but if the `NvOptimusEnablement` has a too high ordinal (gut feeling says > 1024, but it's hard to test) it stops working.
Member

@brecht what @LazyDodo said.

@brecht what @LazyDodo said.

Tried out latest master, issue still persists when building with USD.

Tried out latest master, issue still persists when building with USD.

Which OpenCL driver version is this? Can you attach the output of Help > Save System Info?

I'm using amdgpu-pro-19.50-990351-ubuntu-18.04.

Which OpenCL driver version is this? Can you attach the output of Help > Save System Info? I'm using `amdgpu-pro-19.50-990351-ubuntu-18.04`.

I'm using amdgpu-pro-19.50-967956-ubuntu-18.04

system-info.txt

I'm using `amdgpu-pro-19.50-967956-ubuntu-18.04` [system-info.txt](https://archive.blender.org/developer/F8454289/system-info.txt)

Added subscriber: @Wor3d

Added subscriber: @Wor3d

With the 2.90 builds (5cc7e2ae16) and an upgraded driver (amdgpu-pro-20.10-1048554-ubuntu-18.04) the render does not hang anymore for me, instead this happens now: #75895

With the 2.90 builds (`5cc7e2ae16`) and an upgraded driver (`amdgpu-pro-20.10-1048554-ubuntu-18.04`) the render does not hang anymore for me, instead this happens now: #75895
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Unable to reproduce using ubuntu 18.04.4 HWE + amdgpu-pro-20.10

system-info.txt

Unable to reproduce using ubuntu 18.04.4 HWE + amdgpu-pro-20.10 [system-info.txt](https://archive.blender.org/developer/F8502557/system-info.txt)

Added subscriber: @pixlpusher

Added subscriber: @pixlpusher

Just downloaded 2.82a and I still get this error. Blender freezes at the pie menu when attempting to switch to render preview. I was able to build 2.83 and it works, the usd flag was already switched when I checked for it.
blender_2.82a_dl04.30.20.png

Host: a2L Kernel: 5.6.7-050607-generic x86_64 bits: 64 compiler: gcc v: 9.3.0

         Desktop: Cinnamon 4.2.4 wm: muffin dm: LightDM Distro: Linux Mint 19.2 Tina 
         base: Ubuntu 18.04 bionic 

Machine: Type: Desktop Mobo: ASRock model: X570M Pro4 serial:

         UEFI [Legacy]: American Megatrends v: P1.90 date: 09/10/2019 

CPU: Topology: 8-Core model: AMD Ryzen 7 2700X bits: 64 type: MT MCP arch: Zen+ rev: 2

         L2 cache: 4096 KiB 
         flags: lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm bogomips: 118384 
         Speed: 1888 MHz min/max: 2200/3700 MHz Core speeds (MHz): 1: 1892 2: 1982 3: 2074 
       4: 2200 5: 2199 6: 2198 7: 2199 8: 2199 9: 1891 10: 2197 11: 2198 12: 2200 13: 2199 
       14: 2199 15: 2196 16: 2194 

Graphics: Device-1: AMD Vega 10 XT [Radeon RX Vega 64] driver: amdgpu v: kernel bus ID: 0a:00.0

         chip ID: 1002:687f 
         Display: x11 server: X.Org 1.19.6 driver: amdgpu,ati 
         unloaded: fbdev,modesetting,radeon,vesa resolution: 2560x1080~60Hz 
         OpenGL: renderer: Radeon RX Vega v: 4.6.13572 Core Profile Context compat-v: 4.6.13572 
         direct render: Yes 

amdgpu-pro-19.30-934563-ubuntu-18.04

Just downloaded 2.82a and I still get this error. Blender freezes at the pie menu when attempting to switch to render preview. I was able to build 2.83 and it works, the usd flag was already switched when I checked for it. ![blender_2.82a_dl04.30.20.png](https://archive.blender.org/developer/F8503146/blender_2.82a_dl04.30.20.png) Host: a2L Kernel: 5.6.7-050607-generic x86_64 bits: 64 compiler: gcc v: 9.3.0 ``` Desktop: Cinnamon 4.2.4 wm: muffin dm: LightDM Distro: Linux Mint 19.2 Tina base: Ubuntu 18.04 bionic ``` Machine: Type: Desktop Mobo: ASRock model: X570M Pro4 serial: <filter> ``` UEFI [Legacy]: American Megatrends v: P1.90 date: 09/10/2019 ``` CPU: Topology: 8-Core model: AMD Ryzen 7 2700X bits: 64 type: MT MCP arch: Zen+ rev: 2 ``` L2 cache: 4096 KiB flags: lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm bogomips: 118384 Speed: 1888 MHz min/max: 2200/3700 MHz Core speeds (MHz): 1: 1892 2: 1982 3: 2074 ``` 4: 2200 5: 2199 6: 2198 7: 2199 8: 2199 9: 1891 10: 2197 11: 2198 12: 2200 13: 2199 14: 2199 15: 2196 16: 2194 Graphics: Device-1: AMD Vega 10 XT [Radeon RX Vega 64] driver: amdgpu v: kernel bus ID: 0a:00.0 ``` chip ID: 1002:687f Display: x11 server: X.Org 1.19.6 driver: amdgpu,ati unloaded: fbdev,modesetting,radeon,vesa resolution: 2560x1080~60Hz OpenGL: renderer: Radeon RX Vega v: 4.6.13572 Core Profile Context compat-v: 4.6.13572 direct render: Yes ``` amdgpu-pro-19.30-934563-ubuntu-18.04

This comment was removed by @RL

*This comment was removed by @RL*

With the D7574 fix, I no longer have this issue.

With the [D7574](https://archive.blender.org/developer/D7574) fix, I no longer have this issue.

@pixlpusher, do you have the issue with the latest 2.83 Beta build?
https://builder.blender.org/download/

We could advise users to upgrade to the amdgpu-pro-20.x driver, but it would be interesting to know if amdgpu-pro-19.x still has the issue.

@pixlpusher, do you have the issue with the latest 2.83 Beta build? https://builder.blender.org/download/ We could advise users to upgrade to the amdgpu-pro-20.x driver, but it would be interesting to know if amdgpu-pro-19.x still has the issue.

bstop.m4v Yes, I just downloaded blender-2.83-7a809a7504de-linux64 and it does freeze.

[bstop.m4v](https://archive.blender.org/developer/F8506429/bstop.m4v) Yes, I just downloaded blender-2.83-7a809a7504de-linux64 and it does freeze.

blocal.m4v However, 2.83 I build locally works? I just followed the directions on the website to build.

[blocal.m4v](https://archive.blender.org/developer/F8506438/blocal.m4v) However, 2.83 I build locally works? I just followed the directions on the website to build.

This comment was removed by @pixlpusher

*This comment was removed by @pixlpusher*

Removed subscriber: @Wor3d

Removed subscriber: @Wor3d

Downgrading priority since driver version 20.x is officially released and seems to solve the issue.

Downgrading priority since driver version 20.x is officially released and seems to solve the issue.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-06-02 07:38:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74262
No description provided.