Fix T74262: Cycles OpenCL error on some devices after recent changes